fix the overflow of the slider, create the onclick functionality for the select act button, destructure acts of kindness

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
     margin: 0;
     padding: 0;
     font-family: "Graphik", Verdana;
+    overflow: hidden;
 }
 
 .user {
